testsuite/tests/parser/should_fail/readFail020.stderr

readFail020.hs:3:16: parse error on input ‛}’
